--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -3,4 +3,10 @@ $secondary: #fff;
 $danger:#FF0000;
 $warding: #EFC12D;
 
-
+@font-face {
+  font-family: "Savoye LET Plain";
+  src: local("Savoye LET Plain"),
+   url('/static/fonts/SavoyeLETPlain.ttf') format("truetype");
+   font-weight: normal;
+   font-style: normal;
+}
